# seaorm-soft-delete

./: .env  .gitignore  Cargo.toml  README.md
src/: active_model.rs  entity.rs  lib.rs  migration.rs  model.rs
tests/: integration.rs
